--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.3605FirstScientists">
+        <activity android:name=".AddActivity" />
         <activity android:name=".LocationActivity"></activity>
         <activity android:name=".LearnActivity" />
         <activity android:name=".HomeActivity">
