--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.3605FirstScientists">
-        <activity android:name=".Donate"></activity>
+        <activity android:name=".activities.Login"></activity>
+        <activity android:name=".activities.Register" />
+        <activity android:name=".Donate" />
         <activity android:name=".MapActivity" />
         <activity android:name=".AddActivity" />
         <activity android:name=".LocationActivity" />
