--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.3605FirstScientists">
-        <activity android:name=".activities.Login"></activity>
+        <activity android:name=".StoriesActivity"></activity>
+        <activity android:name=".ClimateActivity" />
+        <activity android:name=".CommunitiesActivity" />
+        <activity android:name=".ReconciliationActivity" />
+        <activity android:name=".ActionPlanActivity" />
+        <activity android:name=".UpdatedLearnActivity" />
+        <activity android:name=".activities.Login" />
         <activity android:name=".activities.Register" />
         <activity android:name=".Donate" />
         <activity android:name=".MapActivity" />
