--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.3605FirstScientists">
-        <activity android:name=".activities.Post"></activity>
-        <activity android:name=".activities.Login">
+
+
+
+        <activity android:name=".activities.Post">
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+
+        <activity android:name=".activities.Login">
+
         </activity>
         <activity android:name=".activities.Register" />
         <activity android:name=".ActionPlanActivity" />
