--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,23 +18,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.3605FirstScientists">
-
-
-
+        <activity android:name=".activities.Blogs"></activity>
         <activity android:name=".activities.Post">
-
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name=".activities.Login">
-
-        </activity>
+        <activity android:name=".activities.Login"></activity>
         <activity android:name=".activities.Register" />
         <activity android:name=".ActionPlanActivity" />
         <activity android:name=".ClimateActivity" />
@@ -47,7 +39,7 @@
         <activity android:name=".AddActivity" />
         <activity android:name=".LocationActivity" />
         <activity android:name=".LearnActivity" />
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".HomeActivity" />
 
         <service
             android:name=".GeocodeAddressIntentService"
