launcher activity login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,13 @@
         <activity android:name=".UpdatedLearnActivity">
 
         </activity>
-        <activity android:name=".activities.Login"></activity>
+        <activity android:name=".activities.Login">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".activities.Register" />
         <activity android:name=".ActionPlanActivity" />
         <activity android:name=".ClimateActivity" />
@@ -46,11 +52,7 @@
         <activity android:name=".LearnActivity" />
         <activity android:name=".HomeActivity">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <service
